--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW11</title>
+    <title>HW12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -20,13 +20,16 @@
         </label>
         <button type="submit">Search</button>
       </form>
+    </div>
+    <div class="gallery-container container">
+      <ul class="gallery"></ul>
+      <div class="load-more hidden">
+        <button type="button" class="load-more-btn">Load more</button>
+      </div>
       <div class="loader hidden">
         <div class="spinner"></div>
         <span class="loader-text">Loading images, please wait...</span>
       </div>
-    </div>
-    <div class="gallery-container container">
-      <ul class="gallery"></ul>
     </div>
 
     <script type="module" src="./main.js"></script>
